--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "Clixo App",
-  "name": "Clixo App Sample",
+  "short_name": "Url Detector App",
+  "name": "App to detect malicious url",
   "icons": [
     {
-      "src": "Clixo_Icon",
+      "src": "logo",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "Clixo_Icon",
+      "src": "logo",
       "type": "image/png",
       "sizes": "1024x1024"
     },
     {
-      "src": "Clixo_Icon",
+      "src": "logo",
       "type": "image/png",
       "sizes": "1024x1024"
     }
